feat: Implementação do algoritmo genético para agendamento universitário
- Adicionada classe principal AlgoritmoGeneticoMain para seleção de versões do algoritmo.
- Criadas configurações específicas para versões simples, escaláveis e ultra escaláveis do algoritmo genético (ConfigSimples, Config100, Config500).
- Implementada a classe CromossomoUltra para otimização do algoritmo com 500+ disciplinas.
- Refatoração da classe DadosProblema para melhorar a geração de cromossomos e cálculo de fitness, incluindo melhorias na lógica de penalização.